# mockpath

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
mockpath/: __init__.py
mockpath/tests/: test_mockpath.py
